Revise model training and evaluation notebooks; update model architecture for normalization
- Updated `.gitignore` to exclude results/plots and results/models directories.
- Added a new Jupyter notebook for data exploration, including data loading, visualization, and initial analysis of the Million Song Dataset.
- Revised the initial model runs notebook to include reproducibility features, such as setting random seeds and improved logging.
- Enhanced model architecture in `models.py` to support normalization layers, allowing for flexible model configurations.
- Added learning rate optimization and evaluation functions in the new optimization experiments notebook.
- Documented the internal report with detailed findings from data acquisition, model architecture exploration, and initial training results.

--- a/notebooks/2_Initial_Model_Runs.ipynb
+++ b/notebooks/2_Initial_Model_Runs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "import sys\n",
     "import os\n",
     "import time\n",
+    "import copy  # To store model state if needed\n",
     "\n",
     "# Ensure the src directory is in the Python path\n",
     "# Adjust the path '..' if your notebook is in a different location relative to src\n",
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +38,26 @@
     "BATCH_SIZE = 128 # Reasonable batch size (can try 64, 256)\n",
     "LEARNING_RATE = 1e-3 # A common default starting LR for Adam\n",
     "N_MINIBATCHES = 15\n",
+    "EVAL_INTERVAL = 5 # Evaluate on validation set every X mini-batches\n",
+    "SEED = 42 # For reproducibility"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Set Seed ---\n",
+    "torch.manual_seed(SEED)\n",
+    "np.random.seed(SEED)\n",
+    "if torch.cuda.is_available():\n",
+    "    torch.cuda.manual_seed_all(SEED)\n",
+    "# Note: MPS backend reproducibility might have limitations, but setting CPU/CUDA seeds is good practice.\n",
+    "\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
-    "print(f\"Using device: {DEVICE}\")"
+    "print(f\"Using device: {DEVICE}\")\n",
+    "print(f\"Reproducibility seed set to: {SEED}\")"
    ]
   },
   {
@@ -55,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,20 +85,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create dataloaders\n",
     "# Use shuffle=True for training to ensure batches are different each epoch\n",
-    "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True, generator=torch.Generator().manual_seed(SEED))\n",
     "# No need to shuffle validation data\n",
     "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE * 2) # Larger batch size for faster validation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +171,7 @@
     "    \"Model_3 (256x128x64)\": Model_3\n",
     "}\n",
     "\n",
-    "results = {} # To store losses per mini-batch and final validation metrics\n",
+    "results = {} # To store detailed results\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()"
    ]
@@ -167,52 +186,74 @@
     "\n",
     "for name, ModelClass in model_architectures.items():\n",
     "    print(f\"\\n--- Running Experiment for: {name} ---\")\n",
+    "    # Re-seed generator for dataloader for each model if desired (optional, but good practice)\n",
+    "    # train_loader.generator.manual_seed(SEED) # Reset iterator state implicitly\n",
+    "    train_iter = iter(train_loader) # Create a fresh iterator\n",
+    "\n",
+    "    # Instantiate model and move to device\n",
+    "    # Note: Parameter initialization depends on the global torch seed set earlier\n",
     "    model = ModelClass().to(DEVICE)\n",
     "    print(model) # Print architecture details\n",
     "\n",
     "    # Use Adam optimizer with a default learning rate\n",
     "    optimizer = optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
     "\n",
-    "    # Store losses for each mini-batch for this model\n",
+    "    # Store performance metrics\n",
     "    minibatch_losses = []\n",
+    "    eval_batches = [] # Batch numbers where evaluation was performed\n",
+    "    val_losses = []\n",
+    "    val_accuracies = []\n",
+    "\n",
     "    start_time = time.time()\n",
     "\n",
     "    # Training loop for N_MINIBATCHES\n",
     "    batch_count = 0\n",
-    "    # Use an iterator to manually fetch batches\n",
-    "    train_iter = iter(train_loader)\n",
     "\n",
     "    while batch_count < N_MINIBATCHES:\n",
     "        try:\n",
+    "            # Fetch the next batch\n",
     "            batch = next(train_iter)\n",
     "        except StopIteration:\n",
-    "            # If the dataloader runs out, reset it (shouldn't happen with only 15 batches usually)\n",
+    "            # Reset iterator if it runs out (shouldn't happen in 15 batches normally)\n",
+    "            print(\"Resetting train_loader iterator...\")\n",
     "            train_iter = iter(train_loader)\n",
     "            batch = next(train_iter)\n",
     "\n",
+    "        # Perform one training step\n",
     "        loss = train_one_step(model, batch, criterion, optimizer, DEVICE)\n",
     "        minibatch_losses.append(loss)\n",
     "        batch_count += 1\n",
+    "\n",
     "        # Optional: Print progress\n",
-    "        if (batch_count % 5 == 0) or (batch_count == N_MINIBATCHES):\n",
-    "             print(f\"  Batch {batch_count}/{N_MINIBATCHES}, Loss: {loss:.4f}\")\n",
+    "        # print(f\"  Batch {batch_count}/{N_MINIBATCHES}, Loss: {loss:.4f}\") # Can be verbose\n",
+    "\n",
+    "        # Intermediate Evaluation\n",
+    "        if batch_count % EVAL_INTERVAL == 0 or batch_count == N_MINIBATCHES:\n",
+    "            eval_start_time = time.time()\n",
+    "            val_loss, val_accuracy = evaluate(model, val_loader, criterion, DEVICE)\n",
+    "            eval_end_time = time.time()\n",
+    "            eval_batches.append(batch_count)\n",
+    "            val_losses.append(val_loss)\n",
+    "            val_accuracies.append(val_accuracy)\n",
+    "            print(f\"  Batch {batch_count}/{N_MINIBATCHES} -> Train Loss (last batch): {loss:.4f}, Val Loss: {val_loss:.4f}, Val Acc: {val_accuracy:.4f} (Eval took {eval_end_time - eval_start_time:.2f}s)\")\n",
+    "\n",
     "\n",
     "    end_time = time.time()\n",
-    "    training_time = end_time - start_time\n",
+    "    total_training_time = end_time - start_time\n",
     "\n",
-    "    # Evaluate on the validation set after 15 mini-batches\n",
-    "    print(f\"Evaluating {name} on validation set...\")\n",
-    "    val_loss, val_accuracy = evaluate(model, val_loader, criterion, DEVICE)\n",
-    "    print(f\"  Validation Loss: {val_loss:.4f}, Validation Accuracy: {val_accuracy:.4f}\")\n",
-    "    print(f\"  Training Time for {N_MINIBATCHES} batches: {training_time:.2f} seconds\")\n",
+    "    print(f\"Finished {name}.\")\n",
+    "    print(f\"  Total Training Time for {N_MINIBATCHES} batches: {total_training_time:.2f} seconds\")\n",
     "\n",
     "    # Store results\n",
     "    results[name] = {\n",
     "        'minibatch_losses': minibatch_losses,\n",
-    "        'val_loss': val_loss,\n",
-    "        'val_accuracy': val_accuracy,\n",
-    "        'training_time': training_time\n",
-    "    }\n"
+    "        'eval_batches': eval_batches, # e.g., [5, 10, 15]\n",
+    "        'val_losses': val_losses,     # List of val losses at eval points\n",
+    "        'val_accuracies': val_accuracies, # List of val accuracies at eval points\n",
+    "        'final_val_loss': val_losses[-1], # Get the last recorded val loss\n",
+    "        'final_val_accuracy': val_accuracies[-1], # Get the last recorded val accuracy\n",
+    "        'training_time': total_training_time\n",
+    "    }"
    ]
   },
   {
@@ -221,27 +262,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Analysis and Visualization ---\n",
-    "\n",
-    "# Plot mini-batch losses\n",
-    "plt.figure(figsize=(12, 6))\n",
+    "# Plot Training Loss (per mini-batch)\n",
+    "plt.figure(figsize=(14, 8))\n",
+    "plt.subplot(2, 1, 1) # Create subplot 1\n",
     "for name, data in results.items():\n",
-    "    plt.plot(range(1, N_MINIBATCHES + 1), data['minibatch_losses'], label=f\"{name} Train Loss\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    plt.plot(range(1, N_MINIBATCHES + 1), data['minibatch_losses'], label=f\"{name}\", alpha=0.8)\n",
+    "\n",
     "plt.xlabel(\"Mini-batch Number\")\n",
     "plt.ylabel(\"Training Loss\")\n",
-    "plt.title(\"Training Loss per Mini-batch (First 15 Batches)\")\n",
+    "plt.title(\"Training Loss per Mini-batch\")\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
-    "plt.xticks(range(1, N_MINIBATCHES + 1))\n",
-    "plt.tight_layout()\n",
+    "plt.xticks(range(1, N_MINIBATCHES + 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot Validation Performance (at evaluation intervals)\n",
+    "plt.subplot(2, 1, 2) # Create subplot 2\n",
+    "for name, data in results.items():\n",
+    "    # Plot validation accuracy\n",
+    "    plt.plot(data['eval_batches'], data['val_accuracies'], label=f\"{name} Val Acc\", marker='o', linestyle='-')\n",
+    "    # Optionally plot validation loss on a secondary y-axis if scales differ too much\n",
+    "    # (Let's keep it simple for now and focus on accuracy)\n",
+    "\n",
+    "plt.xlabel(\"Mini-batch Number (Evaluation Points)\")\n",
+    "plt.ylabel(\"Validation Accuracy\")\n",
+    "plt.title(f\"Validation Accuracy at Evaluation Intervals (every {EVAL_INTERVAL} batches)\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.xticks(results[list(results.keys())[0]]['eval_batches']) # Use eval batches from first result as ticks\n",
+    "\n",
+    "plt.tight_layout() # Adjust layout to prevent overlap\n",
     "plt.show()"
    ]
   },
@@ -251,30 +307,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Print summary table\n",
-    "print(\"\\n--- Summary of Initial Runs (15 Mini-batches) ---\")\n",
+    "# Print summary table (using final validation metrics after 15 batches)\n",
+    "print(\"\\n--- Summary of Initial Runs (Performance after 15 Mini-batches) ---\")\n",
     "print(f\"{'Architecture':<25} | {'Final Val Loss':<15} | {'Final Val Accuracy':<18} | {'Training Time (s)':<15}\")\n",
     "print(\"-\" * 80)\n",
     "for name, data in results.items():\n",
-    "    print(f\"{name:<25} | {data['val_loss']:.4f}{' ':<10} | {data['val_accuracy']:.4f}{' ':<13} | {data['training_time']:.2f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# --- Select Best Performing Architecture ---\n",
-    "# Based on validation accuracy primarily, and considering loss trajectory\n",
-    "best_model_name = \"\"\n",
-    "best_val_accuracy = -1.0\n",
-    "\n",
-    "for name, data in results.items():\n",
-    "    if data['val_accuracy'] > best_val_accuracy:\n",
-    "        best_val_accuracy = data['val_accuracy']\n",
-    "        best_model_name = name\n",
-    "    # Could add tie-breaking logic using val_loss if needed"
+    "    print(f\"{name:<25} | {data['final_val_loss']:.4f}{' ':<10} | {data['final_val_accuracy']:.4f}{' ':<13} | {data['training_time']:.2f}\")"
    ]
   },
   {
@@ -283,8 +321,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"\\nBased on initial validation accuracy, the best performing architecture appears to be: {best_model_name}\")\n",
-    "print(\"(Note: This is based on very limited training. Further training is needed for confirmation)\")"
+    "# --- Select Best Performing Architecture ---\n",
+    "# Based on final validation accuracy primarily\n",
+    "best_model_name = \"\"\n",
+    "best_val_accuracy = -1.0\n",
+    "\n",
+    "for name, data in results.items():\n",
+    "    if data['final_val_accuracy'] > best_val_accuracy:\n",
+    "        best_val_accuracy = data['final_val_accuracy']\n",
+    "        best_model_name = name\n",
+    "    # Could add tie-breaking logic using final_val_loss if needed\n",
+    "\n",
+    "print(f\"\\nBased on final validation accuracy after {N_MINIBATCHES} batches, the best performing architecture appears to be: {best_model_name}\")\n",
+    "print(f\"(Achieved {best_val_accuracy:.4f} accuracy)\")\n",
+    "print(\"(Note: This is based on very limited training. The validation trajectory plot provides more context.)\")"
    ]
   }
  ],
